--- a/time-work-selector/build.gradle
+++ b/time-work-selector/build.gradle
@@ -9,7 +9,7 @@ android {
     defaultConfig {
         minSdkVersion 11
         targetSdkVersion 25
-        versionCode 1
+        versionCode 2
         versionName version
     }
     buildTypes {
@@ -25,15 +25,15 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
 }
 
-def siteUrl = 'https://github.com/liyuhaolol/LightImmersionMode'
+def siteUrl = 'https://github.com/liyuhaolol/TimeWorkSelector'
 
-def gitUrl = 'https://github.com/liyuhaolol/LightImmersionMode.git'
+def gitUrl = 'https://github.com/liyuhaolol/TimeWorkSelector.git'
 
-def libName = 'LightImmersionMode'
+def libName = 'TimeWorkSelector'
 
 group = "spa.lyh.cn"
 
-version = "1.0.4"
+version = "1.0.1"
 
 task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
@@ -66,7 +66,7 @@ install{
         pom{
             project{
                 packaging 'aar'
-                name 'very good framework'
+                name 'time selector'
                 url siteUrl
                 licenses{
                     license{
@@ -103,7 +103,7 @@ bintray{
         repo = 'maven'
         //userOrg = 'lehaha'
         name = libName
-        desc = 'very good framework'
+        desc = 'time selector'
         websiteUrl = siteUrl
         vcsUrl = gitUrl
         licenses = ["Apache-2.0"]
