--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,5 +23,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
     compile 'com.android.support:design:25.3.1'
-    compile project(':time-work-selector')
+    //compile project(':time-work-selector')
+    compile 'spa.lyh.cn:time-work-selector:1.0.1'
 }
