--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
-    //compile project(':time-work-selector')
-    compile 'spa.lyh.cn:time-work-selector:1.0.8'
+    compile project(':time-work-selector')
+    //compile 'spa.lyh.cn:time-work-selector:1.0.9'
 }
