--- a/time-work-selector/build.gradle
+++ b/time-work-selector/build.gradle
@@ -3,14 +3,14 @@ apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 30
+    buildToolsVersion "30.0.2"
 
     defaultConfig {
         minSdkVersion 11
-        targetSdkVersion 22
+        targetSdkVersion 30
         versionCode 4
-        versionName version
+        versionName "1.1.0"
     }
     buildTypes {
         release {
@@ -21,8 +21,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.1.1'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
 
 def siteUrl = 'https://github.com/liyuhaolol/TimeWorkSelector'
@@ -33,7 +32,7 @@ def libName = 'TimeWorkSelector'
 
 group = "spa.lyh.cn"
 
-version = "1.0.9"
+version = "1.1.0"
 
 task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
