--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.21"))
     implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
+    implementation 'io.github.liyuhaolol:CommonUtils:1.5.7'
     implementation project(':time-work-selector')
     //compile 'spa.lyh.cn:time-work-selector:1.0.9'
     //implementation 'spa.lyh.cn:lib_utils:1.1.2'
